@@ -1,37 +1,62 @@
-# flyProxy
+## 打包说明
 
-#### 介绍
-Java实现的TCP代理请求，根据客户的请求ip和客户端协议进行转发请求
+```` shell
+    jpackage    --input target   --name ProxyApp  --main-jar fly-proxy.jar  --type app-image
+````
 
-#### 软件架构
-软件架构说明
+上述命令中：
 
-
-#### 安装教程
-
-1.  xxxx
-2.  xxxx
-3.  xxxx
-
-#### 使用说明
-
-1.  xxxx
-2.  xxxx
-3.  xxxx
-
-#### 参与贡献
-
-1.  Fork 本仓库
-2.  新建 Feat_xxx 分支
-3.  提交代码
-4.  新建 Pull Request
+- `--input target`：指定包含生成的 JAR 文件的目录。
+- `--name ProxyApp`：指定应用程序名称。
+- `--main-jar proxy-1.0-SNAPSHOT-shaded.jar`：指定包含所有依赖项的 JAR 文件。
+- `--main-class com.luckylong.proxy.Application`：指定主类（包含 `public static void main(String[] args)` 方法）。
+- `--type app-image`：指定生成应用程序的类型（如 `app-image`、`exe`、`msi`、`pkg` 等）。
+- `--module-path $JAVA_HOME/jmods`：指定模块路径。
+- `--add-modules java.base,java.desktop`：指定应用程序所需的模块。
+- `--runtime-image jre`：指定生成的运行时图像的名称。
 
 
-#### 特技
 
-1.  使用 Readme\_XXX.md 来支持不同的语言，例如 Readme\_en.md, Readme\_zh.md
-2.  Gitee 官方博客 [blog.gitee.com](https://blog.gitee.com)
-3.  你可以 [https://gitee.com/explore](https://gitee.com/explore) 这个地址来了解 Gitee 上的优秀开源项目
-4.  [GVP](https://gitee.com/gvp) 全称是 Gitee 最有价值开源项目，是综合评定出的优秀开源项目
-5.  Gitee 官方提供的使用手册 [https://gitee.com/help](https://gitee.com/help)
-6.  Gitee 封面人物是一档用来展示 Gitee 会员风采的栏目 [https://gitee.com/gitee-stars/](https://gitee.com/gitee-stars/)
+
+
+**确定必要模块**：
+
+- 通过分析你的应用程序确定哪些 Java 模块是必须的。通常，最小模块是 `java.base`，其他模块根据应用程序的需要添加。
+
+**使用 `jdeps` 工具**：
+
+- `jdeps` 是 JDK 提供的一个依赖分析工具，可以帮助你确定你的应用程序需要哪些模块。
+
+- 运行以下命令来分析你的 `fly-proxy.jar` 所依赖的模块：
+
+  ```shell
+  jdeps --print-module-deps --ignore-missing-deps fly-proxy.jar
+  ```
+
+- 这个命令将输出你的应用程序所依赖的模块列表。例如，输出可能是：
+
+  ```shell
+  java.base,java.desktop,java.logging
+  ```
+
+**创建自定义 JDK**：
+
+- 根据 jdeps 的输出使用 jlink
+
+   创建一个只包含所需模块的自定义 JDK。例如：
+
+  ```shell
+  jlink --module-path $JAVA_HOME/jmods --add-modules java.base,java.desktop,java.logging --output flyProxy-jdk
+  ```
+
+- 最终打包命令
+
+``` shell
+    jpackage \
+    --input target \
+    --name flyProxy \
+    --main-jar fly-proxy.jar \
+    --type app-image \
+    --runtime-image flyProxy-jdk
+```
+
